--- a/css/partials/_variables.scss
+++ b/css/partials/_variables.scss
@@ -1,7 +1,8 @@
 $white-text: white;
 $red-theme: rgba(252, 53, 53, 0.838);
 
-$red-transparent: rgba(255, 30, 30, 0.358);
+$red-transparent: rgba(255, 30, 30, 0.584);
+$gray-transparent: rgba(148, 148, 148, 0.557);
 
 $bgcolor1: rgba(19, 19, 19, 0.893);
 $bgcolor2: rgba(252, 39, 39, 0.954);
